methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:14: error: not found: value faire
  for (c <- 1 to 4) faire(V)
                    ^PictureMono1:14: error: not found: value V
  for (c <- 1 to 4) faire(V)
                          ^